--- a/master.css
+++ b/master.css
@@ -84,8 +84,12 @@ img#upvote {
 }
 .a {
   position: absolute;
-  top: 87%;
+  top: calc(100% - 50px);
   left: 50%;
   transform: translateX(-50%);
   display: none;
+}
+.text2 {
+  position: absolute;
+  top: 49px;
 }
