--- a/master.css
+++ b/master.css
@@ -3,6 +3,11 @@ html, body {
   padding: 0;
   background: #1a1a1b;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
 }
 
 .q {
@@ -12,6 +17,8 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  background: #1a1a1b;
+  padding: 15px;
 }
 .qtop {
   height: 30px;
